Improved swagger docs for qr
